--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,15 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.weather_android_app.mainModule.viewModel.MainViewModel" />
+
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".mainModule.view.MainActivity">
-
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/txtZone"
             android:textAppearance="?attr/textAppearanceHeadline4"
-            android:text="TimeZone"
+            android:text="@{viewModel.result.timezone.replace('_', ' ')}"
+            tools:text="TimeZone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="?attr/colorSecondaryVariant"
@@ -43,7 +50,8 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceHeadline6"
                 android:textColor="?attr/colorSecondary"
-                android:text="234.2°F"
+                android:text="@{String.valueOf(viewModel.result.current.temp)}"
+                tools:text="234.2°F"
                 android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +62,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceBody1"
-                android:text="22:00"
+                android:text="@{String.valueOf(viewModel.result.current.dt)}"
+                tools:text="22:00"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
@@ -63,7 +72,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceOverline"
-                android:text="Humidity: 65%"
+                android:text="@{String.valueOf(viewModel.result.current.humidity)}"
+                tools:text="Humidity: 65%"
                 app:layout_constraintStart_toStartOf="@id/txtDate"
                 app:layout_constraintTop_toBottomOf="@id/txtDate"/>
 
@@ -72,7 +82,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceBody1"
-                android:text="Clouds"
+                android:text="@{viewModel.result.current.weather[0].main}"
+                tools:text="Clouds"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
@@ -81,7 +92,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceCaption"
-                android:text="Few clouds"
+                android:text="@{viewModel.result.current.weather[0].description}"
+                tools:text="Few clouds"
                 app:layout_constraintEnd_toEndOf="@id/txtMain"
                 app:layout_constraintTop_toBottomOf="@id/txtMain"/>
 
