--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     
     <data>
+        <import type="com.example.weather_android_app.common.utlis.CommonUtils"/>
         <variable
             name="viewModel"
             type="com.example.weather_android_app.mainModule.viewModel.MainViewModel" />
@@ -29,7 +30,8 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/currentTittle"
             android:textAppearance="?attr/textAppearanceHeadline5"
-            android:text="Current weather:"
+            android:text="@string/current_weather"
+            app:isGone = "@{!viewModel.isLoad()}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="?attr/colorPrimary"
@@ -50,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceHeadline6"
                 android:textColor="?attr/colorSecondary"
-                android:text="@{String.valueOf(viewModel.result.current.temp)}"
+                android:text="@{@string/temp_weather(viewModel.result.current.temp)}"
                 tools:text="234.2°F"
                 android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceBody1"
-                android:text="@{String.valueOf(viewModel.result.current.dt)}"
+                android:text="@{@string/dt_weather(CommonUtils.INSTANCE.getHour(viewModel.result.current.dt))}"
                 tools:text="22:00"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
@@ -72,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceOverline"
-                android:text="@{String.valueOf(viewModel.result.current.humidity)}"
+                android:text="@{@string/humidity_weather(viewModel.result.current.humidity)}"
                 tools:text="Humidity: 65%"
                 app:layout_constraintStart_toStartOf="@id/txtDate"
                 app:layout_constraintTop_toBottomOf="@id/txtDate"/>
@@ -82,7 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceBody1"
-                android:text="@{viewModel.result.current.weather[0].main}"
+                android:text="@{CommonUtils.INSTANCE.getWeatherMain(viewModel.result.current.weather)}"
                 tools:text="Clouds"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
@@ -92,7 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?attr/textAppearanceCaption"
-                android:text="@{viewModel.result.current.weather[0].description}"
+                android:text="@{CommonUtils.INSTANCE.getWeatherDescription(viewModel.result.current.weather)}"
                 tools:text="Few clouds"
                 app:layout_constraintEnd_toEndOf="@id/txtMain"
                 app:layout_constraintTop_toBottomOf="@id/txtMain"/>
@@ -108,10 +110,11 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         
-        <ProgressBar
+        <com.google.android.material.progressindicator.LinearProgressIndicator
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:indeterminate="true"
+            app:isGone = "@{!viewModel.isLoad()}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/txtZone"
