--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -49,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceOverline"
-                    android:text="@{@string/humidity_weather(current.humidity)}"
+                    android:text="@{current != null ? @string/humidity_weather(current.humidity) : @string/humidity_weather(forecast.humidity)}"
                     tools:text="Humidity: 65%"
                     app:layout_constraintStart_toStartOf="@id/txtDate"
                     app:layout_constraintTop_toBottomOf="@id/txtDate"/>
@@ -59,7 +59,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
-                    android:text="@{CommonUtils.INSTANCE.getWeatherMain(current.weather)}"
+                    android:text="@{current != null ? CommonUtils.INSTANCE.getWeatherMain(current.weather) : CommonUtils.INSTANCE.getWeatherMain(forecast.weather)}"
                     tools:text="Clouds"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
@@ -69,7 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceCaption"
-                    android:text="@{CommonUtils.INSTANCE.getWeatherDescription(current.weather)}"
+                    android:text="@{current != null ? CommonUtils.INSTANCE.getWeatherDescription(current.weather) : CommonUtils.INSTANCE.getWeatherDescription(forecast.weather)}"
                     tools:text="Few clouds"
                     app:layout_constraintEnd_toEndOf="@id/txtMain"
                     app:layout_constraintTop_toBottomOf="@id/txtMain"/>
